work on HW 4 - BST